fix: deactivate left sidebar tags status on mobile

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,10 +1,16 @@
 @mixin mobile-xs{
   @media(max-width:400px){
+    #sidebar {
+      display: none; /* 모바일에서는 좌측 사이드바를 숨깁니다. */
+    }
     @content;
   }
 }
 @mixin mobile{
   @media(max-width:575px){
+    #sidebar {
+      display: none; /* 모바일에서는 좌측 사이드바를 숨깁니다. */
+    }
     @content;
   }
 }
